# organization_parser_bot

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml  release.yml
organization_parser/: __main__.py
organization_parser/adapters/database/: __main__.py  config.py  uow.py  utils.py
organization_parser/adapters/database/migrations/: env.py
organization_parser/adapters/database/repositories/: api_key.py  user.py
organization_parser/adapters/database/tables/: __init__.py  api_key.py  base.py  user.py
organization_parser/adapters/organization_search/gis2/: client.py  models.py
organization_parser/application/: cache.py  logging.py  reduce.py  sentry.py
organization_parser/domains/: uow.py
organization_parser/domains/entities/: api_key.py  organization.py  user.py
organization_parser/domains/entities/common/enums/: __init__.py  source.py
organization_parser/domains/entities/common/value_objects/: __init__.py  api_key_id.py  user_id.py
organization_parser/domains/interfaces/clients/: organization_search.py
organization_parser/domains/interfaces/repositories/: api_key.py  user.py
organization_parser/presentors/bot/: cli.py  config.py
src/: alembic.ini  main.py  start.sh  utils.py
src/bot/: config.py  factory.py  main.py  states.py  ui_commands.py
src/bot/db/: base.py  mixins.py  models.py  provider.py
src/bot/db/migrations/: env.py
src/bot/db/migrations/versions/: 2023_09_07_18811e6c48be_init_db.py
src/bot/db/repositories/: base.py  user.py
src/bot/dialogs/: __init__.py  change_api_key.py  commands.py  main_menu.py  registration.py  request_parser.py
src/bot/exceptions/: __init__.py
src/bot/middlewares/: db.py  settings.py
src/bot/windows/: confirm.py  main_menu.py  set_api_key.py
src/core/: cli.py  dto.py
src/core/service/: __init__.py  async_client.py  sync_client.py  utils.py
src/organization_parser/: __init__.py  __main__.py  cli.py  dto.py  utils.py
