[project]
name = "organization-parser"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sergey Natalenko", email = "sergey.natalenko@mail.ru" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.4.0",
    "mypy>=1.5.1",
    "types-requests>=2.31.0.2",
    "black>=23.7.0",
    "bandit>=1.7.5",
]

[tool.hatch.metadata]
allow-direct-references = true
